--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=bookstore
 
 # Clever Cloud MySQL DB settings
-spring.datasource.url=jdbc:mysql://bqunpfwtutligvvctscq-mysql.services.clever-cloud.com:3306/bqunpfwtutligvvctscq?useSSL=true&requireSSL=true&verifyServerCertificate=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=u9drrenpt0hnc2j1
-spring.datasource.password=OQnrpmiWQERn9kyTAiIe
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.hikari.maximum-pool-size=2
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA settings
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
